fix: show full dumpling box images without scale clipping
Use inner scale frame so enlarged packaging fits the card without overflow crop.

--- a/food/styles.css
+++ b/food/styles.css
@@ -537,15 +537,25 @@ a {
   flex-shrink: 0;
   width: 128px;
   height: 128px;
-  overflow: hidden;
+  overflow: visible;
 }
 
-.menu-card__media--box .menu-card__box-frame img {
+.menu-card__box-scale {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% / var(--box-scale, 1));
+  height: calc(100% / var(--box-scale, 1));
+}
+
+.menu-card__media--box .menu-card__box-scale img {
   width: 100%;
   height: 100%;
   min-height: 0;
   object-fit: contain;
-  object-position: center center;
+  object-position: center var(--box-focus-y, 50%);
+  transform: scale(var(--box-scale, 1));
+  transform-origin: center center;
 }
 
 .menu-card__scale-frame {
@@ -623,7 +633,7 @@ a {
 
 /* Плавное растворение краёв изображений в фон */
 .menu-card__media:not(.menu-card__media--sharp) > img,
-.menu-card__media:not(.menu-card__media--sharp) .menu-card__box-frame img,
+.menu-card__media:not(.menu-card__media--sharp) .menu-card__box-scale img,
 .menu-card__media:not(.menu-card__media--sharp) .menu-card__scale-frame img {
   -webkit-mask-image:
     linear-gradient(
@@ -793,14 +803,24 @@ a {
   justify-content: center;
   width: min(72vw, 300px);
   height: min(72vw, 300px);
-  overflow: hidden;
+  overflow: visible;
 }
 
-.detail-image-wrap--box .detail-box-frame img {
+.detail-box-scale {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% / var(--box-scale, 1));
+  height: calc(100% / var(--box-scale, 1));
+}
+
+.detail-image-wrap--box .detail-box-scale img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  object-position: center;
+  object-position: center var(--box-focus-y, 50%);
+  transform: scale(var(--box-scale, 1));
+  transform-origin: center center;
 }
 
 .detail-scale-frame {
@@ -821,7 +841,7 @@ a {
 }
 
 .detail-image-wrap:not(.detail-image-wrap--sharp) > img,
-.detail-image-wrap:not(.detail-image-wrap--sharp) .detail-box-frame img,
+.detail-image-wrap:not(.detail-image-wrap--sharp) .detail-box-scale img,
 .detail-image-wrap:not(.detail-image-wrap--sharp) .detail-scale-frame img {
   -webkit-mask-image:
     linear-gradient(
